# Update 1.05 *Restructuring: -Seperated PWEL_ROUTING in PWEL and PWEL_COMPONENTS, PWEL_ROUTING -Interfaces for plugins and components *Added: -Plugin-system -1 unfinished plugin(PWEL_PLUGIN_HTML_HELPER) -PWEL_COMPONENT_ROUTE can now handling anykind of routes -PWEL_COMPONENT_ROUTE is able to accept specific params -PWEL got cofigRouting function, replace setting static variables *Bugfixes: -PWEL_COMPONENT::validateJs() works now (type was text/js)

--- a/app/config.ini
+++ b/app/config.ini
@@ -1,3 +1,13 @@
+; Optional
+[pwel]
+status = "development" ; Standard = production
+
+; Optional
+[header]
+charset = "UTF-8"
+contentType = "text/html"
+
+; Optional, Must have just if you wanna use mySQL
 [sql]
 server = "localhost"
 username = "root"
